# vercel-templates-discovery

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  catalog.json  pyproject.toml  skills.sh.json
.agent/plans/: 1-readme-extraction.md  10-docker-image.md  2-cli-smoke-tests.md  3-changelog.md  4-mcp-server.md  5-hermes-skill.md  6-rest-server.md  7-typescript-port.md  8-pypi-publish.md  9-npm-publish.md
.agent/reports/: issue-10-gate-result.md
.agent/reports/code-reviews/: 2026-07-05-1-readme-extraction.md  2026-07-05-4-mcp-server.md  2026-07-05-m3-issues-5-6-pass.md  2026-07-05-typescript-port-issue-7-pass.md  2026-07-05-typescript-port-issue-7.md
.agent/rules/: 00-core.md  01-gate-result.md
.agent/workflows/: code-review.md  plan-feature.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  nightly.yml  publish-docker.yml  publish-npm.yml  publish-pypi.yml  release.yml
.hermes/plans/: 2026-07-06_003045-semantic-search.md
docs/: PROJECT_PLAN.md  PROJECT_STATUS.md  VERCEL_TOS_REVIEW.md
skills/productivity/vercel-templates-discovery/: SKILL.md
skills/vercel-templates/: SKILL.md
skills/vercel-templates/scripts/: query.py
tests/: test_cli.py  test_mcp_server.py  test_scraper.py  test_scraper_mocked.py  test_semantic.py  test_server.py  test_smoke.py
tests/fixtures/: category_ai.html  chatbot-show-raw.json  detail_chatbot.html
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/scripts/: discover.ts  enrich.ts
ts/src/: cli.ts  config.ts  db.ts  embeddings.ts  index.ts  mcp-server.ts  scraper.ts  types.ts
ts/tests/: scraper.test.ts
vercel_templates/: cli.py  config.py  embeddings.py  mcp_server.py  scraper.py  server.py
vercel_templates_discovery.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
