[project]
name = "vercel-templates-discovery"
version = "0.1.0"
description = "Agentic CLI for discovering Vercel Templates"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "rich>=13.0",
    "sqlite-utils>=3.36",
    "python-dotenv>=1.0",
]

[project.scripts]
vercel-templates = "vercel_templates.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vercel_templates*"]
