[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vercel-templates-discovery"
version = "0.2.2"
description = "Agentic CLI for discovering and searching Vercel Templates"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kenny", email = "kenny@example.com"}
]
keywords = ["vercel", "templates", "cli", "agentic", "scraping", "discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "responses>=0.25.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
vercel-templates = "vercel_templates.cli:app"
vercel-templates-mcp = "vercel_templates.mcp_server:main"

[project.urls]
Homepage = "https://github.com/imKXNNY/vercel-templates-discovery"
Repository = "https://github.com/imKXNNY/vercel-templates-discovery"
Issues = "https://github.com/imKXNNY/vercel-templates-discovery/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "T20",
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "vercel_templates.cli"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "vercel_templates.server"
ignore_missing_imports = true
disallow_untyped_decorators = false
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers"

[tool.hatch.build.targets.wheel]
packages = ["vercel_templates"]
